--- a/_config.yml
+++ b/_config.yml
@@ -1,32 +1,45 @@
 # Book settings
 # Learn more at https://jupyterbook.org/customize/config.html
 
-title: My sample book
-author: The Jupyter Book Community
-logo: logo.png
+title: Dask Data Chunking
+author: Author
+copyright: "2023"
+# logo: logo.png
 
-# Force re-execution of notebooks on each build.
-# See https://jupyterbook.org/content/execute.html
+exclude_patterns : [_build, Thumbs.db, .nox, .DS_Store, "*.ipynb_checkpoints", "*.zarr", .pytest_cache  ]
+only_build_toc_files: true
+
 execute:
-  execute_notebooks: force
+  execute_notebooks: cache
+  timeout: 600
+  allow_errors: false
 
-# Define the name of the latex output file for PDF builds
-latex:
-  latex_documents:
-    targetname: book.tex
-
-# Add a bibtex file so that we can create citations
-bibtex_bibfiles:
-  - references.bib
-
-# Information about where the book exists on the web
 repository:
-  url: https://github.com/executablebooks/jupyter-book  # Online location of your book
-  path_to_book: docs  # Optional path to your book, relative to the repository root
-  branch: master  # Which branch of the repository should be used when creating links (optional)
+  url: https://github.com/gzt5142/DaskDataChunking 
+  branch: main  
 
-# Add GitHub buttons to your book
-# See https://jupyterbook.org/customize/config.html#add-a-link-to-your-repository
 html:
   use_issues_button: true
   use_repository_button: true
+  use_search_button: false
+  announcement: "This is a work in progress..."
+
+parse:
+  myst_enable_extensions:
+    - colon_fence
+    - dollarmath
+    - html_admonition
+    - html_image
+    - replacements
+    - smartquotes
+    - substitution
+
+sphinx:
+  recursive_update: true
+  extra_extensions:  ['sphinxcontrib.bibtex']
+  config:
+    bibtex_reference_style: author_year
+    bibtex_bibfiles: ['references.bib']
+    html_extra_path: ['env.yml']
+    html_js_files:
+    - https://cdnjs.cloudflare.com/ajax/libs/require.js/2.3.4/require.min.js
