--- a/_toc.yml
+++ b/_toc.yml
@@ -8,6 +8,9 @@ chapters:
   sections:
   - file: 101/00_grid_rechunk
   - file: 101/01_file_inspection
+- file: 201/index
+  sections:
+  - file: 101/Signal_Denoise
 - file: back/index
   sections:
   - file: back/Glossary
