--- a/_toc.yml
+++ b/_toc.yml
@@ -1,4 +1,3 @@
-
 format: jb-book
 root: index
 
@@ -6,10 +5,15 @@ chapters:
 - file: about/index
 - file: 101/index
   sections:
-  - file: 101/00_grid_rechunk
-  - file: 101/01_file_inspection
-- file: OpenDAP_to_S3
+  - file: 101/ExamineSourceData
+  - file: 101/EffectSizeShape
+  - file: 101/OpenDAP_to_S3
+  - file: 101/Compression
 - file: back/index
   sections:
-  - file: back/Glossary
-  - file: back/Appendix_A
+  - file: helpers.md
+    sections:
+    - file: utils
+    - file: AWS
+    - file: StartNebariCluster
+  - file: back/Appendix_A  
