--- a/env.yml
+++ b/env.yml
@@ -1,12 +1,12 @@
 channels:
 - conda-forge
 dependencies:
-- python=3.10
+- python
 - adlfs
 - aiobotocore
 - birdy
 - black
-- bokeh < 3.0
+- bokeh
 - boto3
 - cdsapi
 - cf_xarray
@@ -16,7 +16,7 @@ dependencies:
 - coiled
 - curl>7.79.0
 - dask-geopandas
-- dask-gateway==2022.4.0
+- dask-gateway
 - datashader
 - datacube
 - dask-geopandas
@@ -25,7 +25,7 @@ dependencies:
 - erddapy
 - fastparquet
 - folium
-- fsspec==2023.3.0
+- fsspec
 - gcsfs
 - gdal
 - gdptools
@@ -64,7 +64,7 @@ dependencies:
 - nbgitpuller
 - nbstripout
 - nco
-- netcdf4 == 1.6.0
+- netcdf4
 - numba
 - numcodecs
 - odc-algo
@@ -137,9 +137,7 @@ dependencies:
 - jsonschema-with-format-nongpl
 - webcolors
 - pip:
-  - kerchunk @ git+https://github.com/fsspec/kerchunk@main
-  - rechunker @ git+https://github.com/pangeo-data/rechunker@master
-  - sparse @ git+https://github.com/jcmgray/sparse@master
-description: ''
-name: pangeofu
-prefix: null
+  - kerchunk
+  - rechunker
+  - sparse
+name: chunking
