--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ only_build_toc_files: true
 execute:
   execute_notebooks: cache
   timeout: 600
-  allow_errors: false
+  allow_errors: true
 
 repository:
   url: https://github.com/gzt5142/DaskDataChunking 
