--- a/_toc.yml
+++ b/_toc.yml
@@ -14,7 +14,7 @@ chapters:
   - file: 201/RechunkingwithDask
   - file: 201/VirtualZarr
   - file: 201/AddingCRStoZarr
-  # - file: 201/OptimalChunkSelection
+  - file: 201/OptimalChunkSelection
   # - file: 201/IcechunkTutorial
 - file: back/index
   sections:
