--- a/_toc.yml
+++ b/_toc.yml
@@ -12,8 +12,8 @@ chapters:
 - file: 201/index
   sections:
   - file: 201/RechunkingwithDask
-  - file: 201/VirtualZarr
-  - file: 201/AddingCRStoZarr
+  - file: 201/CreateVirtualZarr
+  - file: 201/IncludeCRSinZarr
   - file: 201/OptimalChunkSelection
   # - file: 201/IcechunkTutorial
 - file: back/index
